@@ -1,5 +1,6 @@
 package com.minersstudios.msdecor.customdecor.register.furniture.chairs;
 
+import com.google.common.collect.ImmutableList;
 import com.minersstudios.mscore.util.Badges;
 import com.minersstudios.msdecor.MSDecor;
 import com.minersstudios.msdecor.customdecor.CustomDecorData;
@@ -14,6 +15,7 @@ import org.bukkit.inventory.Recipe;
 import org.bukkit.inventory.ShapedRecipe;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
+import org.jetbrains.annotations.Unmodifiable;
 
 import java.util.List;
 import java.util.Locale;
@@ -39,7 +41,7 @@ public class RockingChair implements Sittable, Typed {
     }
 
     @Override
-    public @Nullable List<Recipe> initRecipes() {
+    public @NotNull @Unmodifiable List<Recipe> initRecipes() {
         //<editor-fold desc="Recipes">
         ShapedRecipe acacia = new ShapedRecipe(Type.ACACIA.namespacedKey, this.createItemStack(Type.ACACIA))
                 .shape(
@@ -212,11 +214,10 @@ public class RockingChair implements Sittable, Typed {
                 .setIngredient('L', Material.LEATHER);
         cherryPaintable.setGroup(this.namespacedKey.getNamespace() + ":paintable_rocking_chair");
         //</editor-fold>
-        this.recipes = List.of(
+        return this.recipes = ImmutableList.of(
                 acacia, birch, crimson, darkOak, jungle, oak, spruce, warped, mangrove, cherry,
                 acaciaPaintable, birchPaintable, crimsonPaintable, darkOakPaintable, junglePaintable, oakPaintable, sprucePaintable, warpedPaintable, mangrovePaintable, cherryPaintable
         );
-        return this.recipes;
     }
 
     @Override
