@@ -1,5 +1,6 @@
 package com.minersstudios.msdecor.customdecor.register.furniture.tables;
 
+import com.google.common.collect.ImmutableList;
 import com.minersstudios.msdecor.MSDecor;
 import com.minersstudios.msdecor.customdecor.CustomDecorData;
 import com.minersstudios.msdecor.customdecor.SoundGroup;
@@ -11,6 +12,7 @@ import org.bukkit.inventory.Recipe;
 import org.bukkit.inventory.ShapedRecipe;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
+import org.jetbrains.annotations.Unmodifiable;
 
 import java.util.List;
 import java.util.Locale;
@@ -34,7 +36,7 @@ public class BigTable implements Typed {
     }
 
     @Override
-    public @Nullable List<Recipe> initRecipes() {
+    public @NotNull @Unmodifiable List<Recipe> initRecipes() {
         //<editor-fold desc="Recipes">
         ShapedRecipe acacia = new ShapedRecipe(Type.ACACIA.namespacedKey, this.createItemStack(Type.ACACIA))
                 .shape(
@@ -117,8 +119,7 @@ public class BigTable implements Typed {
                 .setIngredient('P', Material.CHERRY_PLANKS);
         cherry.setGroup(this.namespacedKey.getNamespace() + ":big_table");
         //</editor-fold>
-        this.recipes = List.of(acacia, birch, crimson, darkOak, jungle, oak, spruce, warped, mangrove, cherry);
-        return this.recipes;
+        return this.recipes = ImmutableList.of(acacia, birch, crimson, darkOak, jungle, oak, spruce, warped, mangrove, cherry);
     }
 
     @Override
