@@ -1,5 +1,6 @@
 package com.minersstudios.msessentials.commands.admin.msessentials;
 
+import com.google.common.collect.ImmutableList;
 import com.minersstudios.mscore.command.MSCommand;
 import com.minersstudios.mscore.command.MSCommandExecutor;
 import com.mojang.brigadier.tree.CommandNode;
@@ -43,7 +44,7 @@ import static com.mojang.brigadier.builder.LiteralArgumentBuilder.literal;
         }
 )
 public class MSEssentialsCommandHandler implements MSCommandExecutor {
-    private static final List<String> TAB = List.of("reload", "updateids", "updatemutes");
+    private static final List<String> TAB = ImmutableList.of("reload", "updateids", "updatemutes");
     private static final CommandNode<?> COMMAND_NODE =
             literal("msessentials")
             .then(literal("reload"))
